--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <br />
     <button id="start-button">StartGame</button>
     <div id="game-board">
-      <canvas id="my-canvas"></canvas>
+      <canvas id="canvas"></canvas>
     </div>
-
+    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
