--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>LAB | Flappy Birds</title>
   </head>
   <body>
@@ -12,9 +12,10 @@
     <br />
     <button id="start-button">StartGame</button>
     <div id="game-board">
-      <canvas id="canvas"></canvas>
+      <canvas id="canvas" width="1000" height="800"></canvas>
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src='../js/defaultVars.js'></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
   </body>
 </html>
