--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>LAB | Flappy Birds</title>
-  </head>
-  <body>
-    <img src="./images/logo.png" alt="" style="width:50%;" />
-    <br />
-    <button id="start-button">StartGame</button>
-    <div id="game-board">
-      <canvas id="canvas" width="1000" height="800"></canvas>
-    </div>
-    <script type="text/javascript" src='../js/defaultVars.js'></script>
-    <script type="text/javascript" src="../js/app.js"></script>
-    <script type="text/javascript" src="../js/script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ 
+  <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
+</head>
+<body>
+  <img src="./images/logo.png" alt="" style="width:50%;">
+  <br>
+  <button id="start-button">StartGame</button>
+  <div id="game-board">
+    <canvas id="canvas" width="1000" height="800"></canvas>
+  </div>
+
+  <!-- script -->
+  <script src="./js/defaultVars.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./js/script.js"></script>
+</body>
 </html>
